ingress-https.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-website-ingress-https
  namespace: default
spec:
  tls:
  - hosts:
    - <put your domain here>  # Replace with your Minikube IP.nip.io or localhost if configured
    secretName: tls-secret
  rules:
  - host: <domain-name>  # Replace with your Minikube IP.nip.io or localhost if configured
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-website-service
            port:
              number: 80
